Revision history for Log-Abstraction

0.14
	Adjusted minimum version of Config::Abstraction.
		It should be 0.19 in terms of testing but it's best to use the fixes in 0.25
		RT#165420 - ANDK
	Added 'array' to the logger hash
	Introduced 'level' - minimum level to log at, defaults to 'warn'
	Fixed where to log bugs

0.13	Wed May 14 08:30:53 EDT 2025
	Use '>' after level rather than ':' to files, like lower level loggers
	Try not to put the name of this package in the logfiles,
		it adds nothing apart from disc usage
	Block setting logger => Log::Abstraction in new()
	Croak if we don't know how to handle a message

0.12	Fri May  9 07:42:35 EDT 2025
	Added the file parameter, so that both file and syslog can now be given,
		and file can be read in from a configuration file
	Added the fd descriptor - a file descriptor to log to
	Added separators between fields in file output

0.11	Wed May  7 15:37:37 EDT 2025
	Fixed calling can() on an unblessed variable
	Honour carp_on_warn when syslog is set

0.10	Tue May  6 20:43:48 EDT 2025
	Added carp_on_warn

0.09	Tue May  6 08:15:36 EDT 2025
	If no logger is given, use Log4perl

0.08	Mon May  5 11:39:58 EDT 2025
	Use Config::Abstraction instead of Config::Auto
	Guess the value if script_name if it's not given

0.07	Mon Mar 24 08:36:01 EDT 2025
	Handle "Socket operation on non-socket" on Solaris
	Calling new on an object now returns a clone rather than setting the defaults in the new object

0.06	Wed Mar 12 13:23:24 EDT 2025
	Don't put spaces between elements of an array

0.05	Tue Mar 11 14:10:10 EDT 2025
	Handle being passed a reference to an array

0.04	Mon Mar 10 09:39:46 EDT 2025
	Renamed from Log-YetAnother to Log-Abstraction
	Added config_file argument to new()

0.03	Sat Mar  8 08:40:00 EST 2025
	Fix passing an array to warn()

0.02	Thu Mar  6 17:09:32 EST 2025
	Improved argument checking to new()

0.01	Thu Mar  6 15:42:04 EST 2025
        First draft